# fastapi-nextjs-template

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Makefile  README.md  compose.override.yml  compose.yml  package.json  skills-lock.json
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a704f5ffc865_create_users_table.py  f3a1b2c4d5e6_add_missing_columns.py
backend/app/: main.py  models.py  utils.py
backend/app/alembic/: env.py
backend/app/api/: deps.py  main.py
backend/app/api/v1/: deps.py  router.py
backend/app/api/v1/routes/: auth.py  items.py  users.py
backend/app/core/: config.py  db.py  exceptions.py  security.py
backend/app/db/: seed.py  session.py
backend/app/models/: base.py  item.py  user.py
backend/app/repositories/: base.py  item.py  user.py
backend/app/schemas/: common.py  item.py  user.py
backend/app/services/: auth.py  item.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: c40dcf85998e_create_items_table.py
backend/scripts/: prestart.sh
backend/tests/: conftest.py
backend/tests/api/: test_deps.py
backend/tests/api/routes/: test_items.py  test_login.py  test_users.py  test_utils.py
backend/tests/crud/: test_user.py
backend/tests/utils/: item.py  user.py  utils.py
docker/: compose.base.yml  compose.dev.yml  compose.prod.yml  compose.staging.yml  compose.test.yml  compose.traefik.yml
docs/: README.md
frontend/: .gitignore  Dockerfile  Dockerfile.bun  Dockerfile.playwright  README.md  TESTING.md  biome.json  next.config.ts  package.json  (+5 more)
(+116 files in other folders)
